# mafia-RE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
src/: dllmain.cpp  main.cpp
src/Core/: memory.cpp  memory.h
src/Game/: Vectors.h
src/Game/Math/: Math.cpp  Math.h  MathFuncs.cpp  MathFuncs.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/Game/Physics/: Physics.cpp  Physics.h
src/Game/Trams/: Tram.cpp  Tram.h  TramPassenger.cpp  TramPassenger.h
